tests/snapshots/parse__tests__hir_let_bindings_example.snap
---
source: tests/parse.rs
expression: hir
---
HirProgram {
    [salsa id]: Id(1400),
    functions: {
        "main": HirFunction {
            [salsa id]: Id(1000),
            name: "main",
            params: [],
            body: [
                HirExpr {
                    [salsa id]: Id(c00),
                    expr: Let {
                        var: "x",
                        value: (
                            Number(
                                42,
                            ),
                            SimpleSpan {
                                start: 209,
                                end: 211,
                                context: (),
                            },
                        ),
                    },
                    span: SimpleSpan {
                        start: 202,
                        end: 212,
                        context: (),
                    },
                },
                HirExpr {
                    [salsa id]: Id(c01),
                    expr: Let {
                        var: "y",
                        value: (
                            Call {
                                func: (
                                    Variable(
                                        "+",
                                    ),
                                    SimpleSpan {
                                        start: 223,
                                        end: 224,
                                        context: (),
                                    },
                                ),
                                args: [
                                    (
                                        Variable(
                                            "x",
                                        ),
                                        SimpleSpan {
                                            start: 225,
                                            end: 226,
                                            context: (),
                                        },
                                    ),
                                    (
                                        Number(
                                            8,
                                        ),
                                        SimpleSpan {
                                            start: 227,
                                            end: 228,
                                            context: (),
                                        },
                                    ),
                                ],
                            },
                            SimpleSpan {
                                start: 222,
                                end: 229,
                                context: (),
                            },
                        ),
                    },
                    span: SimpleSpan {
                        start: 215,
                        end: 230,
                        context: (),
                    },
                },
                HirExpr {
                    [salsa id]: Id(c02),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            SimpleSpan {
                                start: 234,
                                end: 244,
                                context: (),
                            },
                        ),
                        args: [
                            (
                                String(
                                    "Testing let bindings:",
                                ),
                                SimpleSpan {
                                    start: 245,
                                    end: 268,
                                    context: (),
                                },
                            ),
                        ],
                    },
                    span: SimpleSpan {
                        start: 233,
                        end: 269,
                        context: (),
                    },
                },
                HirExpr {
                    [salsa id]: Id(c03),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            SimpleSpan {
                                start: 273,
                                end: 283,
                                context: (),
                            },
                        ),
                        args: [
                            (
                                Variable(
                                    "x",
                                ),
                                SimpleSpan {
                                    start: 284,
                                    end: 285,
                                    context: (),
                                },
                            ),
                        ],
                    },
                    span: SimpleSpan {
                        start: 272,
                        end: 286,
                        context: (),
                    },
                },
                HirExpr {
                    [salsa id]: Id(c04),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            SimpleSpan {
                                start: 290,
                                end: 300,
                                context: (),
                            },
                        ),
                        args: [
                            (
                                Variable(
                                    "y",
                                ),
                                SimpleSpan {
                                    start: 301,
                                    end: 302,
                                    context: (),
                                },
                            ),
                        ],
                    },
                    span: SimpleSpan {
                        start: 289,
                        end: 303,
                        context: (),
                    },
                },
                HirExpr {
                    [salsa id]: Id(c05),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            SimpleSpan {
                                start: 307,
                                end: 317,
                                context: (),
                            },
                        ),
                        args: [
                            (
                                Call {
                                    func: (
                                        Variable(
                                            "+",
                                        ),
                                        SimpleSpan {
                                            start: 319,
                                            end: 320,
                                            context: (),
                                        },
                                    ),
                                    args: [
                                        (
                                            Variable(
                                                "x",
                                            ),
                                            SimpleSpan {
                                                start: 321,
                                                end: 322,
                                                context: (),
                                            },
                                        ),
                                        (
                                            Variable(
                                                "y",
                                            ),
                                            SimpleSpan {
                                                start: 323,
                                                end: 324,
                                                context: (),
                                            },
                                        ),
                                    ],
                                },
                                SimpleSpan {
                                    start: 318,
                                    end: 325,
                                    context: (),
                                },
                            ),
                        ],
                    },
                    span: SimpleSpan {
                        start: 306,
                        end: 326,
                        context: (),
                    },
                },
            ],
            span: SimpleSpan {
                start: 189,
                end: 327,
                context: (),
            },
        },
    },
    main: Some(
        "main",
    ),
}
