tests/snapshots/parse__tests__hir_let_with_function_example.snap
---
source: tests/parse.rs
expression: hir
---
HirProgram {
    [salsa id]: Id(1800),
    functions: {
        "main": HirFunction {
            [salsa id]: Id(1400),
            name: "main",
            params: [],
            body: [
                HirExpr {
                    [salsa id]: Id(1000),
                    expr: Let {
                        var: "x",
                        value: (
                            Number(
                                10,
                            ),
                            SimpleSpan {
                                start: 203,
                                end: 205,
                                context: (),
                            },
                        ),
                    },
                    span: SimpleSpan {
                        start: 203,
                        end: 205,
                        context: (),
                    },
                },
                HirExpr {
                    [salsa id]: Id(1001),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            SimpleSpan {
                                start: 210,
                                end: 223,
                                context: (),
                            },
                        ),
                        args: [
                            (
                                Variable(
                                    "x",
                                ),
                                SimpleSpan {
                                    start: 221,
                                    end: 222,
                                    context: (),
                                },
                            ),
                        ],
                    },
                    span: SimpleSpan {
                        start: 210,
                        end: 223,
                        context: (),
                    },
                },
            ],
            span: SimpleSpan {
                start: 179,
                end: 225,
                context: (),
            },
        },
    },
    main: Some(
        "main",
    ),
}
