tests/snapshots/parse__tests__hir_pattern_matching_example.snap
---
source: tests/parse.rs
expression: hir
---
HirProgram {
    [salsa id]: Id(1800),
    functions: {
        "main": HirFunction {
            [salsa id]: Id(1400),
            name: "main",
            params: [],
            body: [
                HirExpr {
                    [salsa id]: Id(1000),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            Span {
                                start: 357,
                                end: 396,
                            },
                        ),
                        args: [
                            (
                                StringInterpolation(
                                    StringInterpolation {
                                        leading_text: "Testing pattern matching:",
                                        segments: [],
                                    },
                                ),
                                Span {
                                    start: 368,
                                    end: 395,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 357,
                        end: 396,
                    },
                },
                HirExpr {
                    [salsa id]: Id(1001),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            Span {
                                start: 401,
                                end: 427,
                            },
                        ),
                        args: [
                            (
                                Call {
                                    func: (
                                        Variable(
                                            "test_number",
                                        ),
                                        Span {
                                            start: 412,
                                            end: 426,
                                        },
                                    ),
                                    args: [
                                        (
                                            Nat(
                                                0,
                                            ),
                                            Span {
                                                start: 424,
                                                end: 425,
                                            },
                                        ),
                                    ],
                                },
                                Span {
                                    start: 412,
                                    end: 426,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 401,
                        end: 427,
                    },
                },
                HirExpr {
                    [salsa id]: Id(1002),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            Span {
                                start: 432,
                                end: 458,
                            },
                        ),
                        args: [
                            (
                                Call {
                                    func: (
                                        Variable(
                                            "test_number",
                                        ),
                                        Span {
                                            start: 443,
                                            end: 457,
                                        },
                                    ),
                                    args: [
                                        (
                                            Nat(
                                                1,
                                            ),
                                            Span {
                                                start: 455,
                                                end: 456,
                                            },
                                        ),
                                    ],
                                },
                                Span {
                                    start: 443,
                                    end: 457,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 432,
                        end: 458,
                    },
                },
                HirExpr {
                    [salsa id]: Id(1003),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            Span {
                                start: 463,
                                end: 490,
                            },
                        ),
                        args: [
                            (
                                Call {
                                    func: (
                                        Variable(
                                            "test_number",
                                        ),
                                        Span {
                                            start: 474,
                                            end: 489,
                                        },
                                    ),
                                    args: [
                                        (
                                            Nat(
                                                42,
                                            ),
                                            Span {
                                                start: 486,
                                                end: 488,
                                            },
                                        ),
                                    ],
                                },
                                Span {
                                    start: 474,
                                    end: 489,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 463,
                        end: 490,
                    },
                },
            ],
            span: Span {
                start: 341,
                end: 492,
            },
        },
        "test_number": HirFunction {
            [salsa id]: Id(1401),
            name: "test_number",
            params: [
                "n",
            ],
            body: [
                HirExpr {
                    [salsa id]: Id(1004),
                    expr: Match {
                        expr: (
                            Variable(
                                "n",
                            ),
                            Span {
                                start: 239,
                                end: 240,
                            },
                        ),
                        cases: [
                            MatchCase {
                                pattern: Literal(
                                    Nat(
                                        0,
                                    ),
                                ),
                                guard: None,
                                body: (
                                    StringInterpolation(
                                        StringInterpolation {
                                            leading_text: "zero",
                                            segments: [],
                                        },
                                    ),
                                    Span {
                                        start: 256,
                                        end: 262,
                                    },
                                ),
                            },
                            MatchCase {
                                pattern: Literal(
                                    Nat(
                                        1,
                                    ),
                                ),
                                guard: None,
                                body: (
                                    StringInterpolation(
                                        StringInterpolation {
                                            leading_text: "one",
                                            segments: [],
                                        },
                                    ),
                                    Span {
                                        start: 277,
                                        end: 282,
                                    },
                                ),
                            },
                            MatchCase {
                                pattern: Literal(
                                    Nat(
                                        2,
                                    ),
                                ),
                                guard: None,
                                body: (
                                    StringInterpolation(
                                        StringInterpolation {
                                            leading_text: "two",
                                            segments: [],
                                        },
                                    ),
                                    Span {
                                        start: 297,
                                        end: 302,
                                    },
                                ),
                            },
                            MatchCase {
                                pattern: Wildcard,
                                guard: None,
                                body: (
                                    StringInterpolation(
                                        StringInterpolation {
                                            leading_text: "other number",
                                            segments: [],
                                        },
                                    ),
                                    Span {
                                        start: 317,
                                        end: 331,
                                    },
                                ),
                            },
                        ],
                    },
                    span: Span {
                        start: 234,
                        end: 337,
                    },
                },
            ],
            span: Span {
                start: 210,
                end: 339,
            },
        },
    },
    main: Some(
        "main",
    ),
}
